# encryptor

./: .dockerignore  .gitignore  AGENTS.md  CD_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  all.html  build.rs  build.sh  constant.ENC_KEY_LEN.html  constant.HEADER_LEN.html  constant.KEY_MAGIC.html  constant.SIG_LEN.html  crates.js  deny.toml  fn.chacha20_block.html  fn.ct_eq.html  fn.decrypt_priv_key.html  fn.derive_key.html  fn.encrypt_decrypt.html  fn.encrypt_decrypt_in_place.html  fn.encrypt_priv_key.html  fn.lock.html  fn.read_file_ct.html  fn.sign.html  fn.unlock.html  fn.verify.html  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  setup.sh  sidebar-items.js  src-files.js  struct.Argon2Config.html  type.Ed25519PrivKey.html  (+1 more)
.cargo/: config.toml
.github/workflows/: afl-fuzz.yml  ci.yml  codeql.yml  publish-docs.yml  release.yml  verify.yml
benches/: encryptor_benches.rs
chacha20_poly1305/: all.html  enum.Command.html  fn.main.html  fn.poly_update_stream.html  fn.sha256_file.html  fn.try_main.html  index.html  sidebar-items.js  struct.Cli.html  struct.ModeArgs.html
crates/chacha20_poly1305_custom/: Cargo.toml
crates/chacha20_poly1305_custom/benches/: encryptor_benches.rs
crates/chacha20_poly1305_custom/src/: error.rs  lib.rs  main.rs
crates/chacha20_poly1305_custom/tests/: integration_roundtrip.rs  keygen.rs  signing.rs
crates/chacha20_poly1305_vetted/: Cargo.toml
crates/chacha20_poly1305_vetted/src/: lib.rs
crates/encryptor_core/: Cargo.toml
crates/encryptor_core/src/: lib.rs
docs/: crates.js  help.html  rustdoc.css  search-index.js  settings.html  src-files.js
docs/chacha20_poly1305/: all.html  enum.Command.html  fn.main.html  fn.poly_update_stream.html  fn.sha256_file.html  fn.try_main.html  index.html  sidebar-items.js  struct.Cli.html  struct.ModeArgs.html
docs/encryptor/: all.html  constant.HEADER_LEN.html  constant.MAGIC.html  fn.chacha20_block.html  fn.ct_eq.html  fn.derive_key.html  fn.encrypt_decrypt.html  fn.encrypt_decrypt_in_place.html  fn.lock.html  fn.read_file_ct.html  fn.unlock.html  index.html  sidebar-items.js  struct.Argon2Config.html
docs/encryptor/error/: enum.Error.html  fn.set_verbose.html  index.html  sidebar-items.js  type.Result.html
docs/search.desc/chacha20_poly1305/: chacha20_poly1305-desc-0-.js
docs/search.desc/encryptor/: encryptor-desc-0-.js
docs/src/chacha20_poly1305/: main.rs.html
docs/src/encryptor/: error.rs.html  lib.rs.html
docs/static.files/: main-fb8c74a8.js  rustdoc-916cea96.css  scrape-examples-5e967b76.js  search-e7298875.js  settings-d72f25bb.js  src-script-63605ae7.js  storage-82c7156e.js
encryptor/: all.html  constant.MAGIC.html  fn.ct_eq.html  fn.derive_key.html  fn.encrypt_decrypt.html  fn.read_file_ct.html  struct.Argon2Config.html
encryptor/error/: type.Result.html
error/: enum.Error.html  fn.set_verbose.html  index.html  sidebar-items.js  type.Result.html
fuzz/: .gitignore  Cargo.toml  Dockerfile  README.md
fuzz/fuzz_targets/: encryptor_fuzz.rs
fuzz/in/: seed1
search.desc/chacha20_poly1305/: chacha20_poly1305-desc-0-.js
search.desc/encryptor/: encryptor-desc-0-.js
src/: error.rs  lib.rs  main.rs
src/chacha20_poly1305/: main.rs.html
src/encryptor/: error.rs.html  lib.rs.html
tests/: chacha20.rs  chacha20_vectors.rs  compile_fail.rs  constant_time.rs  encryption.rs  fuzz_harness.rs  integration_roundtrip.rs  integration_tamper.rs  keygen.rs  signing.rs
tests/data/: sample.txt
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
(+33 files in other folders)
