[package]
name = "encryptor"
autobins = false
version = "0.1.0"
edition = "2021"
# autobenches = false # You can keep this if you prefer explicit targets

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.9"
argon2 = "0.5"
zeroize = "1.5"
sha2 = "0.10"
hex = "0.4"
poly1305 = "0.8.0"
libc = "0.2"
secrecy = "0.10"
rayon = "1.5"
subtle = "2.4"
rpassword = "7.4"
rtoolbox = "0.0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.9", features = ["std"] }

[dev-dependencies]
proptest = "1.0"
tempfile = "3.5"
autocfg = "1.4.0"
criterion = "0.6"
arbitrary      = "1.4"  # Structured input generation 
libfuzzer-sys  = "0.4"  # Link against libFuzzer 
afl            = "0.15"  # AFL instrumentation and macros 

[[bin]]
name = "chacha20_poly1305"
path = "src/main.rs"

[[bench]]
name = "encryptor_benchmarks"   # This is an arbitrary name for your benchmark suite
path = "benches/encryptor_benches.rs" # Path to your benchmark file
harness = false  